apps/home/teslamate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      component: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: app
    spec:
      containers:
        - name: teslamate
          image: docker.io/teslamate/teslamate:latest@sha256:cc87082e7d67a91aa11ca0fb30c2e730bc2a1fccbec9578bb3f3c64f586410f1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          securityContext:
            capabilities:
              drop:
                - ALL
          startupProbe:
            httpGet:
              port: http
              path: /
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              port: http
              path: /
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: http
              path: /
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: import
              mountPath: /opt/app/import
      restartPolicy: Always
      volumes:
        - name: import
          persistentVolumeClaim:
            claimName: import
